--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -12,14 +12,14 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$itm-frontend-primary: mat-palette($mat-indigo);
-$itm-frontend-accent: mat-palette($mat-pink, A200, A100, A400);
+$itm-frontend-primary: mat-palette($mat-teal,A700);
+$itm-frontend-accent: mat-palette($mat-gray);
 
 // The warn palette is optional (defaults to red).
 $itm-frontend-warn: mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$itm-frontend-theme: mat-light-theme($itm-frontend-primary, $itm-frontend-accent, $itm-frontend-warn);
+$itm-frontend-theme: mat-dark-theme($itm-frontend-primary, $itm-frontend-accent, $itm-frontend-warn);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
