--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
-<mat-toolbar color="primary"><span style="color: white">Incident Ticket Manager</span></mat-toolbar>
+<mat-toolbar color="primary"><span style="color: white">Incident Ticket Manager</span>
+
+  <span style="flex: 1 1 auto;"></span>
+
+  <button mat-button routerLink="register">Register</button>
+  <button mat-button routerLink="login">Login</button>
+
+</mat-toolbar>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
