--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,19 +4,30 @@
       <mat-card-title>Login</mat-card-title>
     </mat-card-header>
     <mat-card-content>
+      <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
       <div class="d-flex flex-column">
         <mat-form-field appearance="outline">
           <mat-label>Username</mat-label>
-          <input matInput placeholder="Username...">
+          <input matInput placeholder="Username..." formControlName="username">
+
+          <mat-error *ngIf="username.invalid && (username.dirty || username.touched) && username.errors.required">
+            Username is required
+          </mat-error>
         </mat-form-field>
 
         <mat-form-field appearance="outline">
           <mat-label>Password</mat-label>
-          <input type="password" matInput placeholder="Password...">
+          <input type="password" matInput placeholder="Password..." formControlName="password">
+
+          <mat-error *ngIf="password.invalid && (password.dirty || password.touched) && password.errors.required">
+            Password is required
+          </mat-error>
         </mat-form-field>
 
-        <button mat-raised-button color="primary">Login</button>
+        <button type="submit" mat-raised-button color="primary">Login</button>
+
       </div>
+      </form>
     </mat-card-content>
   </mat-card>
 
