--- a/src/app/project-table/project-table.component.html
+++ b/src/app/project-table/project-table.component.html
@@ -1,28 +1,40 @@
 <mat-card>
   <h2>Projects</h2>
-  <table mat-table [dataSource]="projects">
-    <!-- Name Column -->
+  <mat-table [dataSource]="projects">
+    <!-- Position Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let project">{{project.name}}</td>
+      <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
     </ng-container>
 
-    <!-- Admin Column -->
+    <!-- Name Column -->
     <ng-container matColumnDef="admin">
-      <th mat-header-cell *matHeaderCellDef>Admin</th>
-      <td mat-cell *matCellDef="let project">{{project.admin}}</td>
+      <mat-header-cell *matHeaderCellDef> Admin </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.admin}} </mat-cell>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="date">
+      <mat-header-cell *matHeaderCellDef> Date </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.date | date}}  </mat-cell>
     </ng-container>
 
     <!-- Actions Column -->
-    <!--
-    <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef>Actions</th>
-      <td mat-cell *matCellDef="let project">{{project.state}}</td>
-    </ng-container>
-    -->
 
-    <tr mat-header-row *matHeaderRowDef="DISPLAYED_COLUMNS"></tr>
-    <tr mat-row *matRowDef="let row; columns: DISPLAYED_COLUMNS;"></tr>
-  </table>
+    <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        <button mat-icon-button>
+          <mat-icon>create</mat-icon>
+        </button>
+        <button mat-icon-button>
+          <mat-icon>delete</mat-icon>
+        </button>
+      </mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+  </mat-table>
 
 </mat-card>
