--- a/src/app/project-table/project-table.component.html
+++ b/src/app/project-table/project-table.component.html
@@ -24,12 +24,14 @@
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
       <mat-cell *matCellDef="let element">
+        <ng-container *ngIf="this.profile.username == element.admin">
         <button mat-icon-button>
           <mat-icon>create</mat-icon>
         </button>
         <button mat-icon-button>
           <mat-icon>delete</mat-icon>
         </button>
+        </ng-container>
       </mat-cell>
     </ng-container>
 
@@ -37,4 +39,7 @@
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
 
+  <mat-card-actions>
+    <button mat-raised-button color="primary" (click)="handleClickCreateProject()">Create</button>
+  </mat-card-actions>
 </mat-card>
