--- a/src/app/project-table/project-table.component.html
+++ b/src/app/project-table/project-table.component.html
@@ -24,13 +24,16 @@
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
       <mat-cell *matCellDef="let element">
-        <ng-container *ngIf="this.profile.username == element.admin">
+        <ng-container *ngIf="this.profile.username == element.admin || profile.admin">
         <button mat-icon-button>
           <mat-icon>create</mat-icon>
         </button>
-        <button mat-icon-button>
+        <button (click)="handleClickDeleteProject(element)" mat-icon-button>
           <mat-icon>delete</mat-icon>
         </button>
+          <button [routerLink]="['project', element.name]" mat-icon-button>
+            <mat-icon>visibility</mat-icon>
+          </button>
         </ng-container>
       </mat-cell>
     </ng-container>
