--- a/src/app/new-project/new-project.component.html
+++ b/src/app/new-project/new-project.component.html
@@ -5,13 +5,14 @@
       <mat-label>Project name ...</mat-label>
       <input matInput placeholder="Project name..." formControlName="projectname">
 
-      <mat-error
-        *ngIf="projectname.invalid && (projectname.dirty || projectname.touched) && projectname.errors.required">
-        Project name is required
+      <mat-error *ngIf="password.invalid && (password.dirty || password.touched) && password.errors.required">
+        Password is required
       </mat-error>
-      <mat-error
-        *ngIf="projectname.invalid && (projectname.dirty || projectname.touched) && projectname.errors.minlength">
-        Project name is required
+      <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
+        Password must contain at least one lower case letter<br>
+        Password must contain at least one upper case letter<br>
+        Password contain a least 8 characters<br>
+        Password contain a least one special character<br>
       </mat-error>
     </mat-form-field>
     <button type="submit" mat-raised-button color="primary">Create</button>
