--- a/src/app/new-user/new-user.component.html
+++ b/src/app/new-user/new-user.component.html
@@ -14,34 +14,19 @@
         User name is required
       </mat-error>
     </mat-form-field>
-
-
-    <mat-form-field appearance="outline">
-      <mat-label>Phone ...</mat-label>
-      <input matInput placeholder="Phone name..." formControlName="phone">
-
-      <mat-error
-        *ngIf="phone.invalid && (phone.dirty || phone.touched) && phone.errors.required">
-        Phone is required
-      </mat-error>
-      <mat-error
-        *ngIf="phone.invalid && (phone.dirty || phone.touched) && phone.errors.minlength">
-        Phone is required
-      </mat-error>
-    </mat-form-field>
-
+    
 
     <mat-form-field appearance="outline">
-      <mat-label>Address ...</mat-label>
-      <input matInput placeholder="Address ..." formControlName="address">
+      <mat-label>Password ...</mat-label>
+      <input type="password" matInput placeholder="Password ..." formControlName="password">
 
       <mat-error
-        *ngIf="address.invalid && (address.dirty || address.touched) && address.errors.required">
-        Address is required
+        *ngIf="password.invalid && (password.dirty || password.touched) && password.errors.required">
+        Password is required
       </mat-error>
       <mat-error
-        *ngIf="address.invalid && (address.dirty || address.touched) && address.errors.minlength">
-        Address is required
+        *ngIf="password.invalid && (password.dirty || password.touched) && password.errors.minlength">
+        Password is required
       </mat-error>
     </mat-form-field>
 
