--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,13 @@
 
   <span style="flex: 1 1 auto;"></span>
 
-  <button mat-button routerLink="register">Register</button>
-  <button mat-button routerLink="login">Login</button>
-
+  <ng-container *ngIf="profile === null">
+    <button mat-button routerLink="register">Register</button>
+    <button mat-button routerLink="login">Login</button>
+  </ng-container>
+  <ng-container  *ngIf="profile !== null">
+    <button mat-button (click)="logout()">Logout</button>
+  </ng-container>
 </mat-toolbar>
 <div class="container">
   <router-outlet></router-outlet>
