--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -1,4 +1,4 @@
-<div class="project-detail-content">
+<div class="project-detail-content" *ngIf="!!project">
   <h1>Projet {{ project.name }}</h1>
   <section>
     <h2>A Propos</h2>
@@ -8,7 +8,7 @@
 
   <section>
     <h2>Incidents en cours</h2>
-    <table mat-table [dataSource]="project.tickets">
+    <table mat-table [dataSource]="dataSource">
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef class="table-column">Numéro</th>
         <td mat-cell *matCellDef="let ticket">{{ ticket.id }}</td>
@@ -37,8 +37,8 @@
       <tr mat-header-row *matHeaderRowDef="DISPLAYED_COLUMNS"></tr>
       <tr mat-row *matRowDef="let ticket; columns: DISPLAYED_COLUMNS;" (click)="openTicketDetail(ticket)"></tr>
     </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-    </section>
+    <mat-paginator #paginator [length]="project.tickets.length" [pageSize]="5" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+  </section>
 
   <section>
     <h2>Statistiques</h2>
@@ -49,7 +49,7 @@
   </section>
 
   <div class="buttons-block">
-    <button mat-raised-button color="primary" class="float__button">Créer un incident</button>
+    <button mat-raised-button color="primary" class="float__button" (click)="onAddTicketClick()">Créer un incident</button>
     <button mat-stroked-button color="primary" class="float__button" *ngIf="project.isAdmin" (click)="onDeleteClick()">Supprimer le projet</button>
   </div>
 </div>
