--- a/src/app/ticket-detail/ticket-detail.component.html
+++ b/src/app/ticket-detail/ticket-detail.component.html
@@ -1,13 +1,17 @@
 <h1 mat-dialog-title>Rapport Incident</h1>
 <div mat-dialog-content>
-  <p>Identifiant: {{ data.id }}</p>
-  <p>Créé le: {{ data.date | date: 'dd-MM-yyyy' }}</p>
-  <p>Etat: {{ data.status | status }}</p>
-  <p>Intitulé: {{ data.title }}</p>
-  <p>Détail: {{ data.content }}</p>
-  <p>Rapporteur: {{ data.client.name }}</p>
+  <p>Identifiant : {{ data.id }}</p>
+  <p>Projet concerné : {{ data.projectName | titlecase }}</p>
+  <p>Créé le : {{ data.date | date: 'dd-MM-yyyy' }}</p>
+  <p>Etat : {{ data.status | status }}</p>
+  <p>Intitulé : {{ data.title }}</p>
+  <p>Détail : {{ data.content }}</p>
+  <p *ngIf="!!data.client">Rapporteur : {{ data.client.name }}</p>
+  <p>Utilisateur assigné : {{ data.userName ? data.userName : 'Aucun pour le moment' }}</p>
 </div>
 <div mat-dialog-actions class="modal-bottom">
   <button mat-stroked-button color="primary" (click)="onCancelClick()">Fermer</button>
+  <button mat-raised-button cdkFocusInitial color="primary" *ngIf="!data.userName" (click)="onAssignClick()">Me l'assigner</button>
+  <button mat-raised-button cdkFocusInitial color="primary" *ngIf="canResolve()" (click)="onResolveClick()">Résoudre</button>
   <button mat-raised-button cdkFocusInitial color="primary" (click)="onUpdateClick()">Modifier</button>
 </div>
