--- a/src/app/ticket-detail/ticket-detail.component.html
+++ b/src/app/ticket-detail/ticket-detail.component.html
@@ -13,5 +13,5 @@
   <button mat-stroked-button color="primary" (click)="onCancelClick()">Fermer</button>
   <button mat-raised-button cdkFocusInitial color="primary" *ngIf="!data.userName" (click)="onAssignClick()">Me l'assigner</button>
   <button mat-raised-button cdkFocusInitial color="primary" *ngIf="canResolve()" (click)="onResolveClick()">Résoudre</button>
-  <button mat-raised-button cdkFocusInitial color="primary" (click)="onUpdateClick()">Modifier</button>
+  <button mat-raised-button cdkFocusInitial *ngIf="canUpdate()" color="primary" (click)="onUpdateClick()">Modifier</button>
 </div>
