--- a/src/app/new-user/new-user.component.html
+++ b/src/app/new-user/new-user.component.html
@@ -1,49 +1,64 @@
 <h1>Add User</h1>
 <div class="d-flex flex-column">
-  <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-    <mat-form-field appearance="outline">
-      <mat-label>User name ...</mat-label>
-      <input matInput placeholder="User name..." formControlName="name">
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+      <mat-form-field appearance="outline">
+        <mat-label>Project name ...</mat-label>
+        <input matInput placeholder="User name..." formControlName="name">
 
-      <mat-error
-        *ngIf="name.invalid && (name.dirty || name.touched) && name.errors.required">
-        User name is required
-      </mat-error>
-      <mat-error
-        *ngIf="name.invalid && (name.dirty || name.touched) && name.errors.minlength">
-        User name is required
-      </mat-error>
-    </mat-form-field>
+        <mat-error
+          *ngIf="name.invalid && (name.dirty || name.touched) && name.errors.required">
+          user name is required
+        </mat-error>
+        <mat-error
+          *ngIf="name.invalid && (name.dirty || name.touched) && name.errors.minlength">
+          user name is required
+        </mat-error>
+      </mat-form-field>
+
+
+      <mat-form-field appearance="outline">
+        <mat-label>Email</mat-label>
+        <input type="email" matInput placeholder="Email..." formControlName="email">
+
+        <mat-error *ngIf="email.invalid && (email.dirty || email.touched) && email.errors.required">
+          Email is required
+        </mat-error>
+        <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">
+          Email is Invalid
+        </mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
+        <mat-label>Password</mat-label>
+        <input type="password" matInput placeholder="Password..." formControlName="password">
+
+        <mat-error *ngIf="password.invalid && (password.dirty || password.touched) && password.errors.required">
+          Password is required
+        </mat-error>
+        <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
+          Password must contain at least one lower case letter<br>
+          Password must contain at least one upper case letter<br>
+          Password contain a least 8 characters<br>
+          Password contain a least one special character<br>
+        </mat-error>
+      </mat-form-field>
     
-    <mat-form-field appearance="outline">
-        <mat-label>Password ...</mat-label>
-        <input matInput type="password" placeholder="Password..." formControlName="password">
-        
-      <mat-error *ngIf="password.invalid && (password.dirty || password.touched) && password.errors.required">
-        Password is required
-      </mat-error>
-      <mat-error *ngIf="password.invalid && (password.dirty || password.touched)">
-        Password must contain at least one lower case letter<br>
-        Password must contain at least one upper case letter<br>
-        Password contain a least 8 characters<br>
-        Password contain a least one special character<br>
-      </mat-error>
-    </mat-form-field>
 
-    
-    <mat-form-field appearance="outline">
-      <mat-label>Email ...</mat-label>
-      <input matInput placeholder="Email name..." formControlName="email">
+      <mat-form-field appearance="outline">
+        <mat-label>Confirm Password</mat-label>
+        <input type="password" matInput placeholder="Password confirmation..." formControlName="passwordConfirmation">
+        <mat-error
+          *ngIf="passwordConfirmation.invalid && (passwordConfirmation.dirty || passwordConfirmation.touched) && passwordConfirmation.errors.required">
+          Password confirmation is required
+        </mat-error>
+        <mat-error *ngIf="passwordConfirmation.invalid && (passwordConfirmation.dirty || passwordConfirmation.touched) && passwordConfirmation.errors &&
+passwordConfirmation.errors.ConfirmPassword ">
+          Passwords don't match
+        </mat-error>
+      </mat-form-field>
 
-      <mat-error
-        *ngIf="email.invalid && (email.dirty || email.touched) && email.errors.required">
-        Email is required
-      </mat-error>
-      <mat-error
-        *ngIf="email.invalid && (email.dirty || email.touched) && email.errors.minlength">
-        Email is required
-      </mat-error>
-    </mat-form-field>
-    <button type="submit" mat-raised-button color="primary">Add</button>
-  </form>
+    <button type="submit" mat-raised-button color="primary">Add user</button>
+  </form> 
 </div>
+
+
