--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,7 @@
 <h2>Welcome {{profile.username}}</h2>
 
 <app-project-table></app-project-table>
+<app-client-table *ngIf="profile.admin"></app-client-table>
+<!--
+
+-->
