--- a/src/app/project-table/project-table.component.html
+++ b/src/app/project-table/project-table.component.html
@@ -1,26 +1,25 @@
 <mat-card>
   <h2>Projects</h2>
   <mat-table [dataSource]="projects">
-    <!-- Position Column -->
+    <!-- Name Column -->
     <ng-container matColumnDef="name">
       <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
     </ng-container>
 
-    <!-- Name Column -->
+    <!-- Admin Column -->
     <ng-container matColumnDef="admin">
       <mat-header-cell *matHeaderCellDef> Admin </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.admin}} </mat-cell>
     </ng-container>
 
-    <!-- Weight Column -->
+    <!-- Date Column -->
     <ng-container matColumnDef="date">
       <mat-header-cell *matHeaderCellDef> Date </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{element.date | date}}  </mat-cell>
     </ng-container>
 
     <!-- Actions Column -->
-
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
       <mat-cell *matCellDef="let element">
