delete ticket  + back navigation

--- a/src/app/confirm-modal/confirm-modal.component.html
+++ b/src/app/confirm-modal/confirm-modal.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Suppression</h1>
 <div mat-dialog-content>
-  <p>Etes-vous sûr de vouloir supprimer le projet {{ data.name }}?</p>
+  <p>Etes-vous sûr de vouloir supprimer le {{ data.itemModel }} {{ data.name }}?</p>
 </div>
 <div mat-dialog-actions class="modal-bottom">
   <button mat-button (click)="onCancelClick()">Fermer</button>
