--- a/src/app/timestamp-to-date/timestamp-to-date.component.html
+++ b/src/app/timestamp-to-date/timestamp-to-date.component.html
@@ -1,1 +1,1 @@
-<div>{{ date.getMonth() | month }} - {{ date.getFullYear() }}: {{ ticketsNumber }} ticket<span *ngIf="ticketsNumber > 1">s</span></div>
+<span>{{ date.getMonth() | month }} {{ date.getFullYear() }}: {{ ticketsNumber }}</span><br/>
