--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -1,17 +1,17 @@
 <div class="project-detail-content" *ngIf="!!project">
-  <p (click)="goBack()" class="back__button"><mat-icon>arrow_back</mat-icon> Revenir à l'accueil</p>
-  <h1>Projet {{ project.name }}</h1>
+  <p (click)="goBack()" class="back__button"><mat-icon>arrow_back</mat-icon> Go back home</p>
+  <h1>{{ project.name }} project</h1>
   <section>
-    <h2>A Propos</h2>
-    <div>Date de création: {{ project.date | date: 'dd-MM-yyyy' }}</div>
-    <div>Administrateur: {{ project.admin }}</div>
+    <h2>About</h2>
+    <div>Creation date: {{ project.date | date: 'dd-MM-yyyy' }}</div>
+    <div>Administrator: {{ project.admin }}</div>
   </section>
 
   <section>
-    <h2>Incidents en cours</h2>
+    <h2>Incidents</h2>
     <table mat-table [dataSource]="dataSource">
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef class="table-column">Numéro</th>
+        <th mat-header-cell *matHeaderCellDef class="table-column">Id</th>
         <td mat-cell *matCellDef="let ticket">{{ ticket.id }}</td>
       </ng-container>
 
@@ -21,7 +21,7 @@
       </ng-container>
 
       <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef class="table-column">Intitulé</th>
+        <th mat-header-cell *matHeaderCellDef class="table-column">Title</th>
         <td mat-cell *matCellDef="let ticket">{{ ticket.title }}</td>
       </ng-container>
 
@@ -31,7 +31,7 @@
       </ng-container>
 
       <ng-container matColumnDef="state">
-        <th mat-header-cell *matHeaderCellDef class="table-column">Avancement</th>
+        <th mat-header-cell *matHeaderCellDef class="table-column">State</th>
         <td mat-cell *matCellDef="let ticket">{{ ticket.status | status }}</td>
       </ng-container>
 
@@ -42,22 +42,22 @@
   </section>
 
   <section>
-    <h2>Statistiques globales</h2>
-    <div>Nombre total d'incidents: {{ project.ticketStats.total }}</div>
-    <div>Nombre d'incidents ouverts: {{ project.ticketStats.open }}</div>
-    <div>Nombre d'incidents en cours: {{ project.ticketStats.inProgress }}</div>
-    <div>Nombre d'incidents résolus: {{ project.ticketStats.resolved }}</div>
+    <h2>General stats</h2>
+    <div>Total incidents count: {{ project.ticketStats.total }}</div>
+    <div>Open incidents count: {{ project.ticketStats.open }}</div>
+    <div>In progress incidents count: {{ project.ticketStats.inProgress }}</div>
+    <div>Resolved incidents count: {{ project.ticketStats.resolved }}</div>
   </section>
 
   <section>
-    <h2>Statistiques mensuelles</h2>
+    <h2>Monthly stats</h2>
     <ng-container *ngFor="let monthStatKey of monthStatsKeys; let i = index">
-      Nombre de tickets en <app-timestamp-to-date [date]="monthStatKey" [ticketsNumber]="monthStatsValues[i]"></app-timestamp-to-date>
+      Ticket count in <app-timestamp-to-date [date]="monthStatKey" [ticketsNumber]="monthStatsValues[i]"></app-timestamp-to-date>
     </ng-container>
   </section>
 
   <div class="buttons-block">
-    <button mat-raised-button color="primary" class="float__button" (click)="onAddTicketClick()">Créer un incident</button>
-    <button mat-stroked-button color="primary" class="float__button" *ngIf="project.isAdmin" (click)="onDeleteClick()">Supprimer le projet</button>
+    <button mat-raised-button color="primary" class="float__button" (click)="onAddTicketClick()">Create an incident</button>
+    <button mat-stroked-button color="primary" class="float__button" *ngIf="project.isAdmin" (click)="onDeleteClick()">Close the project</button>
   </div>
 </div>
