--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -3,7 +3,7 @@
   <h1>{{ project.name }} project</h1>
   <section>
     <h2>About</h2>
-    <div>Creation date: {{ project.date | date: 'dd-MM-yyyy' }}</div>
+    <div>Creation date: {{ project.date | date: 'MM-dd-yyyy' }}</div>
     <div>Administrator: {{ project.admin }}</div>
   </section>
 
