--- a/src/app/user-table/user-table.component.html
+++ b/src/app/user-table/user-table.component.html
@@ -4,7 +4,7 @@
       <!-- Position Column -->
       <ng-container matColumnDef="name">
         <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+        <mat-cell *matCellDef="let element"> {{element.username}} </mat-cell>
       </ng-container>
   
       <!-- role Column -->
@@ -17,7 +17,7 @@
       <!-- Email Column -->
       <ng-container matColumnDef="mail">
         <mat-header-cell *matHeaderCellDef> Email </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.mail}}  </mat-cell>
+        <mat-cell *matCellDef="let element"> {{element.email}}  </mat-cell>
       </ng-container>
   
       <!-- Actions Column -->
@@ -26,7 +26,7 @@
         <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
         <mat-cell *matCellDef="let element">
           <ng-container *ngIf="this.profile.username == element.admin || profile.admin">
-          <button mat-icon-button>
+          <button (click)="handleClickModifUser(element)" mat-icon-button>
             <mat-icon>create</mat-icon>
           </button>
           <button (click)="handleClickDeleteUser(element)" mat-icon-button>
