--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -27,7 +27,7 @@
 
       <ng-container matColumnDef="date">
         <th mat-header-cell *matHeaderCellDef class="table-column">Date</th>
-        <td mat-cell *matCellDef="let ticket">{{ ticket.date }}</td>
+        <td mat-cell *matCellDef="let ticket">{{ ticket.date | date: 'MM-dd-yyyy' }}</td>
       </ng-container>
 
       <ng-container matColumnDef="title">
