--- a/src/app/delete-user-project-modal/delete-user-project-modal.component.html
+++ b/src/app/delete-user-project-modal/delete-user-project-modal.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Remove developer from project {{ data.project.name }}</h1>
+<h1 mat-dialog-title>Remove developer from project {{ data.project.name | titlecase }}</h1>
 <div mat-dialog-content class="add-user-project-modal">
   <form [formGroup]="deleteUserForm" (ngSubmit)="onSubmit()">
     <mat-form-field appearance="outline">
