--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -1,9 +1,9 @@
 <div class="project-detail-content" *ngIf="!!project">
   <p (click)="goBack()" class="back__button"><mat-icon>arrow_back</mat-icon> Go back home</p>
-  <h1>{{ project.name }} project</h1>
+  <h1>{{ project.name | titlecase }} project</h1>
   <section>
     <h2>About</h2>
-    <div>Creation date: {{ project.date | date: 'MM-dd-yyyy' }}</div>
+    <div>Creation date: {{ project.date | date }}</div>
     <div>Administrator: {{ project.admin | titlecase }}</div>
     <div>Developers:
       <span *ngIf="project.users.length === 0">No one for now</span>
@@ -27,17 +27,17 @@
 
       <ng-container matColumnDef="date">
         <th mat-header-cell *matHeaderCellDef class="table-column">Date</th>
-        <td mat-cell *matCellDef="let ticket">{{ ticket.date | date: 'MM-dd-yyyy' }}</td>
+        <td mat-cell *matCellDef="let ticket">{{ ticket.date | date }}</td>
       </ng-container>
 
       <ng-container matColumnDef="title">
         <th mat-header-cell *matHeaderCellDef class="table-column">Title</th>
-        <td mat-cell *matCellDef="let ticket">{{ ticket.title }}</td>
+        <td mat-cell *matCellDef="let ticket">{{ ticket.title | titlecase }}</td>
       </ng-container>
 
       <ng-container matColumnDef="client">
         <th mat-header-cell *matHeaderCellDef class="table-column">Client</th>
-        <td mat-cell *matCellDef="let ticket">{{ ticket.client.name }}</td>
+        <td mat-cell *matCellDef="let ticket">{{ ticket.client.name | titlecase }}</td>
       </ng-container>
 
       <ng-container matColumnDef="state">
