--- a/src/app/ticket-detail/ticket-detail.component.html
+++ b/src/app/ticket-detail/ticket-detail.component.html
@@ -2,7 +2,7 @@
 <div mat-dialog-content>
   <p>Id : {{ data.id }}</p>
   <p>Concerned project : {{ data.projectName | titlecase }}</p>
-  <p>Created : {{ data.date | date: 'MM-dd-yyyy' }}</p>
+  <p>Created : {{ data.date | date }}</p>
   <p>State : {{ data.status | status }}</p>
   <p>Title : {{ data.title }}</p>
   <p>Detail : {{ data.content }}</p>
