create user oke

--- a/src/app/modif-user/modif-user.component.html
+++ b/src/app/modif-user/modif-user.component.html
@@ -45,6 +45,6 @@
         Email is required
       </mat-error>
     </mat-form-field>
-    <button type="submit" mat-raised-button color="primary">Add</button>
+    <button type="submit" mat-raised-button color="primary">Modify</button>
   </form>
 </div>
