--- a/src/app/user-table/user-table.component.html
+++ b/src/app/user-table/user-table.component.html
@@ -9,8 +9,8 @@
   
       <!-- role Column -->
       <ng-container matColumnDef="role">
-        <mat-header-cell *matHeaderCellDef> Role </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.role}} </mat-cell>
+        <mat-header-cell *matHeaderCellDef> Admin </mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.admin}} </mat-cell>
       </ng-container>
   
 
